<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.GraphRangeFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgBack"
                    android:tint="@color/white"
                    android:src="@drawable/ic_arrow"
                    android:layout_width="@dimen/img_back"
                    android:layout_height="@dimen/img_back"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:textSize="@dimen/text_large"
                    android:text="@string/graph_sampling_range"
                    android:textColor="@color/white"
                    android:padding="@dimen/space_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_large"
        android:orientation="vertical">

        <TextView
            android:text="@string/actual_pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="@dimen/space_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <EditText
                android:id="@+id/etActPressureMin"
                android:hint="@string/min"
                android:digits="0123456789-"
                android:layout_marginEnd="@dimen/space_normal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etActPressureMax"
                android:hint="@string/max"
                android:digits="0123456789-"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/errorPressure"
            android:textColor="@color/red_btn_bg_pressed_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="@dimen/span_xxl"
            android:text="@string/actual_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="@dimen/space_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <EditText
                android:id="@+id/etActVolMin"
                android:hint="@string/min"
                android:digits="0123456789-"
                android:layout_marginEnd="@dimen/space_normal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etActVolMax"
                android:hint="@string/max"
                android:digits="0123456789-"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/errorVol"
            android:textColor="@color/red_btn_bg_pressed_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/actual_flow"
            android:layout_marginTop="@dimen/span_xxl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="@dimen/space_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <EditText
                android:id="@+id/etActFlowMin"
                android:hint="@string/min"
                android:digits="0123456789-"
                android:layout_marginEnd="@dimen/space_normal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etActFlowMax"
                android:hint="@string/max"
                android:digits="0123456789-"
                android:layout_marginStart="@dimen/space_normal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:id="@+id/errorFlow"
            android:textColor="@color/red_btn_bg_pressed_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnUpdate"
        android:layout_margin="@dimen/space_normal"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:background="@drawable/button_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>