<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.SettingsFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imgBack"
                    android:tint="@color/white"
                    android:src="@drawable/ic_arrow"
                    android:layout_width="@dimen/img_back"
                    android:layout_height="@dimen/img_back"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:textSize="@dimen/text_large"
                    android:text="@string/action_settings"
                    android:textColor="@color/white"
                    android:padding="@dimen/space_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_large"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:text="@string/data_fetch_time"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvDataFetchInterval"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <SeekBar
                android:id="@+id/sbDataFetchInterval"
                android:layout_marginTop="@dimen/space_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="@dimen/space_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:text="@string/actual_time"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvActualTimeInterval"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <SeekBar
                android:id="@+id/sbActualTimeInterval"
                android:layout_marginTop="@dimen/space_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="@dimen/span_xxl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:text="@string/graph_update_time"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvGraphUpdateInterval"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <SeekBar
                android:id="@+id/sbGraphInterval"
                android:layout_marginTop="@dimen/space_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginTop="@dimen/span_xxl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:text="@string/max_values_in_graph"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvGraphEntries"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <SeekBar
                android:id="@+id/sbGraphEntries"
                android:layout_marginTop="@dimen/space_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/span_xxl"
                android:text="@string/graph_sampling_range"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvGraphRange"
                android:textSize="18sp"
                android:text="Actual Pressure: 0 to 100"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/space_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvChangeRange"
                android:layout_marginTop="@dimen/space_normal"
                android:text="@string/change_range"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvIp"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/span_xxl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvChange"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/change_ip"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>